--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5001",
+  "type": "module",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^18.3.1",
