--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "description": "final frontend training project",
   "main": "src/index.js",
+  "type": "module",
+  "workspaces": ["frontend"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx start-server -s ./frontend/build",
     "start-Render": "fastify start -l info app.js",
-    "build": "react-scripts build"
+    "build": "npm run build --prefix frontend"
   },
   "author": "Iaroslav Rusanov sco.nuff@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "@fastify/static": "^7.0.4",
     "@hexlet/chat-server": "^2.0.3"
   }
 }
