--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -4,6 +4,7 @@ env:
 
 extends:
   - airbnb
+  - plugin:react/recommended
   - plugin:functional/recommended
   - plugin:react-hooks/recommended
 
@@ -13,7 +14,7 @@ parserOptions:
   ecmaVersion: latest
   sourceType: module
 
-  plugins:
+plugins:
   - react
   - functional
 
