--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
