--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.6",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
+    "leo-profanity": "^1.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
